Fix collapser icon not changing when clicked in footer menu mobile

--- a/assets/sass/organisms/_footer.scss
+++ b/assets/sass/organisms/_footer.scss
@@ -63,7 +63,7 @@
     }
   }
 
-  .collapse-menu-item > .retraitespopulaires-icon:not(.collapsed) {
+  .collapser-menu-item > .retraitespopulaires-icon:not(.collapsed) {
     transform: scaleY(-1);
   }
 
